--- a/about.html
+++ b/about.html
@@ -140,20 +140,21 @@
 
         <h1 class="titleabout">About Me</h1><br>
 
-        <p>Hello! I'm Bill (Yuan Hong) Sun, an <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a> 
-            graduate from the University of Toronto, majoring in
+        <p>Hello! I'm Bill (Yuan Hong) Sun. I am currently working as a Machine Learning Engineer at 
+            <a href="https://www.kinaxis.com/en">Kinaxis</a>, where I 
+            develop machine learning modules and pipelines for retail and shipment forecasting solutions. Previously, 
+            from 2019 to 2022, I worked at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer,
+            working closely with the <a href="https://www.nuralogix.ai/anura/">Anura</a> personal health monitoring app and the 
+            <a href="https://www.deepaffex.ai">DeepAffex (DFX)</a> cloud service.</p>
+
+        <p>I am currently studying Master's of computer science at Georgia Tech. Previously, I graduated 
+            from the <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a> 
+            program from the University of Toronto, majoring in
             <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">
                 Machine Learning and Artificial Intelligence</a>. I am enthusiastic about using software, big data,
             machine learning, and the engineering approach to solve challenging problems across different disciplines, and helping to 
             improve people's lives through technology.
         </p>
-        <!--I am currently working at <a href="https://www.kinaxis.com/en">Kinaxis</a> as a Machine Learning Engineer-->
-
-        <p>I am currently working as a Machine Learning Engineer, where I 
-            develop machine learning modules and pipelines for retail and shipment forecasting solutions. Previously, 
-            from 2019 to 2022, I worked at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer,
-            working closely with the <a href="https://www.nuralogix.ai/anura/">Anura</a> personal health monitoring app and the 
-            <a href="https://www.deepaffex.ai">DeepAffex (DFX)</a> cloud service.</p>
 
         <p>I have numerous software <a href="projects.html">projects</a>, and I am also doing research at University of Toronto, 
             as showcased by my publications below. 
@@ -510,7 +511,7 @@
 
     <br>
     <p>Click the images to view the details for each project.</p>
-    <p>If you are interested, you can view my <b>résumé</b> <a href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf"
+    <p>If you are interested, you can view my <b>résumé</b> <a href="notfound.html"
             style="color: #ffbfbf; padding: 0; text-decoration: none;">here</a>.</p><br>
 
 </div>
