--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
             <h1>Bill Sun</h1>
             <h5>Machine Learning and Software Engineer</h5>
             <p>
-                Hi! I am a Machine Learning and Software Engineer. I graduated from <a
-                    href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">
-                    Engineering Science - Machine Intelligence</a>
-                @ University of Toronto. This is a showcase of my skills, projects, research, and insights. Enjoy!
+                Hi! I am a Machine Learning and Software Engineer. 
+                This is a showcase of my skills, projects, research, and insights. Enjoy!
             </p>
             <ul>
                 <li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fab fa-linkedin"
@@ -29,7 +27,7 @@
             </ul>
             <button><a href="about.html">About</a></button>
             <button><a href="research.html">Research</a></button>
-            <button><a href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf">Résumé</a></button>
+            <button><a href="notfound.html">Résumé</a></button>
             <button><a href="blogs.html">Blog</a></button>
         </div>
     </body>
