--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
             working closely with the <a href="https://www.nuralogix.ai/anura/">Anura</a> personal health monitoring app and the 
             <a href="https://www.deepaffex.ai">DeepAffex (DFX)</a> cloud service.</p>
 
-        <p>I am currently studying Master's of computer science at Georgia Tech. Previously, I graduated 
+        <p>I am currently pursuing a Master's of computer science at Georgia Tech. Previously, I graduated 
             from the <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a> 
             program from the University of Toronto, majoring in
             <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">
