--- a/experience.html
+++ b/experience.html
@@ -16,6 +16,32 @@
 		<h1>Professional Experience Summary</h1><br>
 
 		<figure class="item">
+			<a href="https://www.kinaxis.com/en" target="_blank"><img src="pics/supply-chain.png"
+					alt="portfolio item" width=400 height=250></a>
+			<figcaption class="desc">
+				<p>
+					<font color="white"><strong>Kinaxis</strong></font>
+				</p>
+				<p>
+					<font color="white">Data Science Software Developer</font>
+				</p>
+			</figcaption>
+		</figure>
+
+		<figure class="item">
+			<a href="https://nuralogix.ai" target="_blank"><img src="pics/digital-health.jpeg"
+					alt="portfolio item" width=400 height=250></a>
+			<figcaption class="desc">
+				<p>
+					<font color="white"><strong>Nuralogix Corporation</strong></font>
+				</p>
+				<p>
+					<font color="white">Data Science Software Developer</font>
+				</p>
+			</figcaption>
+		</figure>
+
+		<figure class="item">
 			<a href="research.html" target="_blank"><img src="pics/anxiety.png"
 					alt="portfolio item" width=400 height=250></a>
 			<figcaption class="desc">
@@ -32,14 +58,17 @@
 		</figure>
 
 		<figure class="item">
-			<a href="pey.html" target="_blank"><img src="pics/nuralogix.png"
-					alt="portfolio item" width=400 height=250></a>
+			<a href="transit.html" target="_blank"><img src="pics/pho.png" alt="portfolio item" width=400
+					height=250></a>
 			<figcaption class="desc">
 				<p>
-					<font color="white"><strong>Nuralogix Corporation</strong></font>
+					<font color="white"><strong>Public Health Ontario</strong></font>
 				</p>
 				<p>
-					<font color="white">Data Science Software Developer</font>
+					<font color="white">Data Science Intern</font>
+				</p>
+				<p>
+					<font color="white">Undergraduate Capstone Project</font>
 				</p>
 			</figcaption>
 		</figure>
