--- a/projects.html
+++ b/projects.html
@@ -16,17 +16,39 @@
 		<h1>Projects Summary</h1><br>
 
 		<figure class="item">
-			<a href="https://survey-demo.deepaffex.ai/login" target="_blank"><img src="pics/nuralogix.png"
+			<a href="index.html" target="_blank"><img src="pics/portfolio.png" alt="portfolio item" width=400 height=250></a>
+			<figcaption class="desc">
+				<p>
+					<font color="white"><strong>Portfolio website</strong></font>
+				</p>
+				<p>
+					<font color="white">Personal portfolio website</font>
+				</p>
+			</figcaption>
+		</figure>
+
+		<figure class="item">
+			<a href="https://www.kangleelab.com" target="_blank"><img src="pics/lab.png" alt="portfolio item" width=400
+					height=250></a>
+			<figcaption class="desc">
+				<p>
+					<font color="white"><strong>Kang Lee Lab Website</strong></font>
+				</p>
+				<p>
+					<font color="white">Kang Lee Developmental Psychology Lab, University of Toronto</font>
+				</p>
+			</figcaption>
+		</figure>
+
+		<figure class="item">
+			<a href="https://kangleelab-surveys.com" target="_blank"><img src="pics/mental-health.png"
 					alt="portfolio item" width=400 height=250></a>
 			<figcaption class="desc">
 				<p>
-					<font color="white"><strong>Mental Health Questionnaire Website</strong></font>
+					<font color="white"><strong>Mental Health Survey Website</strong></font>
 				</p>
 				<p>
-					<font color="white">Mental health surveys powered by AWS Lambda and machine learning models</font>
-				</p>
-				<p>
-					<font color="white">Access Code: 0000</font>
+					<font color="white">Rapid mental health surveys powered by machine learning models</font>
 				</p>
 			</figcaption>
 		</figure>
@@ -69,32 +91,7 @@
 					<font color="white"><strong>Music / Playlist Sharing Application</strong></font>
 				</p>
 				<p>
-					<font color="white">Hack The 6ix 2018</font>
-				</p>
-			</figcaption>
-		</figure>
-
-		<figure class="item">
-			<a href="game.html" target="_blank"><img src="pics/game1.png" alt="portfolio item" width=400 height=250></a>
-			<figcaption class="desc">
-				<p>
-					<font color="white"><strong>Boxhead Video Game</strong></font>
-				</p>
-				<p>
-					<font color="white">Python Programming Project</font>
-				</p>
-			</figcaption>
-		</figure>
-
-		<figure class="item">
-			<a href="aer201.html" target="_blank"><img src="pics/aer2011.png" alt="portfolio item" width=400
-					height=250></a>
-			<figcaption class="desc">
-				<p>
-					<font color="white"><strong>Pill Packaging Machine</strong></font>
-				</p>
-				<p>
-					<font color="white">AER201—Engineering Design, University of Toronto</font>
+					<font color="white">Hack The 6ix 2018 Project</font>
 				</p>
 			</figcaption>
 		</figure>
