update experience images

--- a/experience.html
+++ b/experience.html
@@ -16,7 +16,7 @@
 		<h1>Professional Experience Summary</h1><br>
 
 		<figure class="item">
-			<a href="https://www.kinaxis.com/en" target="_blank"><img src="pics/supply-chain.png"
+			<a href="https://www.kinaxis.com/en" target="_blank"><img src="pics/kinaxis.png"
 					alt="portfolio item" width=400 height=250></a>
 			<figcaption class="desc">
 				<p>
@@ -29,7 +29,7 @@
 		</figure>
 
 		<figure class="item">
-			<a href="https://nuralogix.ai" target="_blank"><img src="pics/digital-health.jpeg"
+			<a href="https://nuralogix.ai" target="_blank"><img src="pics/nuralogix.jpeg"
 					alt="portfolio item" width=400 height=250></a>
 			<figcaption class="desc">
 				<p>
@@ -74,7 +74,7 @@
 		</figure>
 
 		<figure class="item">
-			<a href="transit.html" target="_blank"><img src="pics/transit2.png" alt="portfolio item" width=400
+			<a href="transit.html" target="_blank"><img src="pics/uoft.jepg" alt="portfolio item" width=400
 					height=250></a>
 			<figcaption class="desc">
 				<p>
