--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
 		</figure>
 
 		<figure class="item">
-			<a href="capstone.html" target="_blank"><img src="pics/pho.png"
+			<a href="capstone.html" target="_blank"><img src="pics/vaccine.jpg"
 					alt="portfolio item" width=400 height=250></a>
 			<figcaption class="desc">
 				<p>
