update experience images

--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
 		</figure>
 
 		<figure class="item">
-			<a href="https://kangleelab-surveys.com" target="_blank"><img src="pics/mental-health.png"
+			<a href="https://kangleelab-surveys.com" target="_blank"><img src="pics/mental-health.jpg"
 					alt="portfolio item" width=400 height=250></a>
 			<figcaption class="desc">
 				<p>
