update experience images

--- a/experience.html
+++ b/experience.html
@@ -29,7 +29,7 @@
 		</figure>
 
 		<figure class="item">
-			<a href="https://nuralogix.ai" target="_blank"><img src="pics/nuralogix.jpeg"
+			<a href="https://nuralogix.ai" target="_blank"><img src="pics/nuralogix.png"
 					alt="portfolio item" width=400 height=250></a>
 			<figcaption class="desc">
 				<p>
@@ -74,7 +74,7 @@
 		</figure>
 
 		<figure class="item">
-			<a href="transit.html" target="_blank"><img src="pics/uoft.jepg" alt="portfolio item" width=400
+			<a href="transit.html" target="_blank"><img src="pics/uoft.jpeg" alt="portfolio item" width=400
 					height=250></a>
 			<figcaption class="desc">
 				<p>
