--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 This is a showcase of my skills, projects, research, and insights. Enjoy!
             </p>
             <ul>
-                <li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fab fa-linkedin"
+                <li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fa-brands fa-linkedin"
                             aria-hidden="true"></i></a></li>
-                <li><a href="https://github.com/billyhsun"><i class="fab fa-github-square" aria-hidden="true"></i></a>
+                <li><a href="https://github.com/billyhsun"><i class="fa-brands fa-github-square" aria-hidden="true"></i></a>
                 </li>
             </ul>
             <button><a href="about.html">About</a></button>
