--- a/about.html
+++ b/about.html
@@ -142,10 +142,9 @@
 
         <p>Hello! I'm Bill (Yuan Hong) Sun. I am currently working as a Machine Learning Engineer at 
             <a href="https://www.kinaxis.com/en">Kinaxis</a>, where I 
-            develop machine learning modules and pipelines for retail and shipment forecasting solutions. Previously, 
+            develop machine learning modules and pipelines for supply chain forecasting solutions. Previously, 
             from 2019 to 2022, I worked at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer,
-            working closely with the <a href="https://www.nuralogix.ai/anura/">Anura</a> personal health monitoring app and the 
-            <a href="https://www.deepaffex.ai">DeepAffex (DFX)</a> cloud service.</p>
+            working closely with the <a href="https://www.nuralogix.ai/anura/">Anura</a> personal health monitoring app.</p>
 
         <p>I am currently pursuing a Master's of computer science at Georgia Tech. Previously, I graduated 
             from the <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a> 
@@ -160,7 +159,7 @@
             as showcased by my publications below. 
             In my spare time, I am involved in numerous <a href="clubs.html">extracurricular activities</a>. I actively
             attend technical meetups and participate in hackathons. I also like to workout, play sports, travel, photography, volunteer, and
-            mentor younger peers.</p>
+            mentor younger peers. I am currently open for mentoring, so if you're interested, please send me an <a href="mailto:billyuanhong.sun@mail.utoronto.ca">email</a>.</p>
 
         <p>You can reach me by
             <a href="mailto:billyuanhong.sun@mail.utoronto.ca">email</a> or <a
