--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
         <p>Hello! I'm Bill (Yuan Hong) Sun. I am currently working as a Machine Learning Engineer at 
             <a href="https://www.kinaxis.com/en">Kinaxis</a>, where I 
             develop machine learning modules and pipelines for supply chain forecasting solutions. Previously, 
-            from 2019 to 2022, I worked at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer,
+            I worked at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer,
             working closely with the <a href="https://www.nuralogix.ai/anura/">Anura</a> personal health monitoring app.</p>
 
         <p>I am currently pursuing a Master's of computer science at Georgia Tech. Previously, I graduated 
