--- a/notfound.html
+++ b/notfound.html
@@ -15,7 +15,7 @@
 
 		<h1>This page is currently unavailable</h1><br>
 
-        <h3>Sorry for the inconvenience. Please come back at another time.</h3><br>
+        <h3>Sorry for the inconvenience. Please <a href="mailto:billyuanhong.sun@mail.utoronto.ca">email</a> me for any inquires.</h3><br>
 	
 	</div>
 </body>
