--- a/about.html
+++ b/about.html
@@ -539,6 +539,16 @@
 
 </div>
 
+<div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:300px;">
+    <h2 id="exp" style="text-align:center;">Presentations and Guest Lectures</h2>
+
+    <p>2023 &emsp; University of Toronto - Machine Learning Applications in Psychology and Education (APD 5044)</p>
+    <p>2023 &emsp; University of Toronto - OISE Graduate Student Research Conference</p>
+    <p>2022 &emsp; University of Toronto - Applied Psychology and Human Development Research Gala</p>
+    <p>2022 &emsp; Canadian Developmental Psychology Conference</p>
+
+</div>
+
 <br><br>
 </div>
 
