--- a/about.html
+++ b/about.html
@@ -544,6 +544,7 @@
 
     <p>2023 &emsp; University of Toronto - Machine Learning Applications in Psychology and Education (APD 5044)</p>
     <p>2023 &emsp; University of Toronto - OISE Graduate Student Research Conference</p>
+    <p>2023 &emsp; University of Toronto - Developmental Interest Group</p>
     <p>2022 &emsp; University of Toronto - Applied Psychology and Human Development Research Gala</p>
     <p>2022 &emsp; Canadian Developmental Psychology Conference</p>
 
