--- a/about.html
+++ b/about.html
@@ -8,6 +8,22 @@
 <main-header></main-header>
 
 <style>
+    html {
+        scroll-behavior: smooth;
+    }
+
+    body {
+        background-color: #1a2639;
+        color: #d4d4dc;
+        animation: fadeIn 1s ease-in;
+        transition: background-color 0.3s ease;
+    }
+
+    @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+    }
+
     box {
         font-size: 15px;
         padding: 7px 10px 7px 10px;
@@ -16,41 +32,70 @@
         text-align: center;
     }
 
-    p {
-        color: white;
-    }
-
-    .titleabout {
-        color: white;
-    }
-
-    h2 {
-        color: white;
-    }
-
-    h3 {
-        color: white;
+    .titleabout, h2, h3 {
+        color: #3e8989;
     }
 
     table {
         table-layout: fixed;
     }
 
-    th,
-    td {
+    th, td {
         text-align: center;
     }
 
     body p a {
         text-decoration: none;
-        color: #ffbfbf;
+        color: #84a9ac;
         padding: 0;
+        position: relative;
     }
 
     body p a:hover {
-        text-decoration: underline;
-        color: #ffbfbf;
-        padding: 0;
+        color: #e8e8e8;
+    }
+
+    body p a::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #84a9ac;
+        transform: scaleX(0);
+        transition: transform 0.3s ease-out;
+    }
+
+    body p a:hover::after {
+        transform: scaleX(1);
+    }
+
+    a {
+        text-decoration: none;
+        color: #84a9ac;
+        transition: color 0.3s ease;
+        position: relative;
+    }
+
+    a:hover {
+        color: #e8e8e8;
+    }
+
+    a::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #84a9ac;
+        transform: scaleX(0);
+        transition: transform 0.3s ease-out;
+    }
+
+    a:hover::after {
+        transform: scaleX(1);
     }
 
     .container {
@@ -58,40 +103,52 @@
         margin-left: 10%;
         margin-top: 5px;
         margin-bottom: 5px;
-        background-color: #ddd;
+        background-color: #2c3e50;
+        transition: background-color 0.3s ease;
     }
 
     .skills {
         text-align: right;
         padding: 5px;
         color: white;
+        animation: skillFill 2s ease-out;
+        transition: background-color 0.3s ease;
+    }
+
+    @keyframes skillFill {
+        from { width: 0; }
+        to { width: 100%; }
     }
 
     .fluent {
         width: 100%;
-        background-color: #888888;
+        background-color: #3498db;
     }
 
     .good {
         width: 67%;
-        background-color: #888888;
+        background-color: #2980b9;
     }
 
     .familiar {
         width: 33%;
-        background-color: #888888;
+        background-color: #1f618d;
     }
+
+    .container:nth-child(1) .skills { animation-delay: 0.1s; }
+    .container:nth-child(2) .skills { animation-delay: 0.2s; }
+    .container:nth-child(3) .skills { animation-delay: 0.3s; }
 
     .tooltip {
         position: relative;
         display: inline-block;
-        border-bottom: 1px dotted black;
+        border-bottom: 1px dotted #d4d4dc;
     }
 
     .tooltip .tooltiptext {
         visibility: hidden;
         width: 120px;
-        background-color: black;
+        background-color: #34495e;
         color: #FFFFFF;
         text-align: center;
         border-radius: 6px;
@@ -112,7 +169,7 @@
         margin-top: -5px;
         border-width: 5px;
         border-style: solid;
-        border-color: transparent black transparent transparent;
+        border-color: transparent #34495e transparent transparent;
     }
 
     .tooltip:hover .tooltiptext {
@@ -123,15 +180,23 @@
     #skillicon {
         color:#EEEEEE; 
         margin: 5px;
+        transition: transform 0.3s ease;
     }
 
     #skillicon:hover {
         color:#FFFFFF; 
-        transition: opacity 0.1s;
+        transform: rotate(10deg);
+    }
+
+    .item img {
+        transition: transform 0.3s ease;
+    }
+
+    .item img:hover {
+        transform: scale(1.05);
     }
     
 </style>
-
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:500px;">
     <body>
@@ -165,8 +230,7 @@
         <p>You can reach me by
             <a href="mailto:billyuanhong.sun@mail.utoronto.ca">email</a> or <a
                 href="https://www.linkedin.com/in/bill-yuan-hong-sun/">LinkedIn</a>. 
-            You can also read about my engineering insights and reflections in my <a href="blogs.html"
-                    style="color: #ffbfbf; padding: 0; text-decoration: none;">blog</a>.
+            You can also read about my engineering insights and reflections in my <a href="blogs.html">blog</a>.
                 </p>
             <br><br><br>
 
@@ -511,8 +575,7 @@
 
     <br>
     <p>Click the images to view the details for each project.</p>
-    <p>If you are interested, you can view my <b>résumé</b> <a href="notfound.html"
-            style="color: #ffbfbf; padding: 0; text-decoration: none;">here</a>.</p><br>
+    <p>If you are interested, you can view my <b>résumé</b> <a href="notfound.html">here</a>.</p><br>
 
 </div>
 
@@ -554,7 +617,9 @@
 <br><br>
 </div>
 
-</body>
+    </body>
+</div>
+
 
 <!--Footer-->
 <main-footer></main-footer>
