--- a/blogs.html
+++ b/blogs.html
@@ -12,58 +12,74 @@
         box-sizing: border-box;
     }
 
-    /* Add a gray background color with some padding */
     body {
         font-family: Arial;
         padding: 20px;
-        background: #333333;
+        background: #1a2639;
+        color: #d4d4dc;
+        animation: fadeIn 1s ease-in;
+        transition: background-color 0.3s ease;
     }
 
-    /* Header/Blog Title */
+    @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+    }
+
+
     .header {
-        padding-top: 30px;
-        padding-bottom: 1px;
-        font-size: 30px;
+        padding-top: 100px;
+        padding-bottom: 30px;
+        font-size: 36px; 
         text-align: center;
-        background: #333333;
-        color: #FFFFFF;
+        color: #3e8989;
     }
 
-    /* Create two unequal columns that floats next to each other */
-    /* Left column */
     .leftcolumn {
         float: left;
-        width: 25%;
+        width: 30%;
     }
 
-    /* Right column */
     .rightcolumn {
         float: left;
-        width: 75%;
+        width: 70%;
         padding-left: 20px;
     }
 
-    /* Add a card effect for articles */
     .card {
-        color: #111111;
-        background-color: #DDDDDD;
+        background-color: #2c3e50;
         padding: 20px;
         margin-top: 20px;
+        border-radius: 5px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        transition: transform 0.3s ease, box-shadow 0.3s ease; 
+    }
+
+    .card:hover {
+        transform: scale(1.03); 
+        box-shadow: 0 8px 16px rgba(0,0,0,0.2); 
+    }
+
+    .card h2 {
+        color: #3e8989;
+    }
+
+    .card a {
+        color: #84a9ac;
+        text-decoration: none;
+        transition: color 0.3s ease;
     }
 
     .card a:hover {
-        color: #333333;
-        text-decoration: none;
+        color: #e8e8e8;
     }
 
-    /* Clear floats after the columns */
     .row:after {
         content: "";
         display: table;
         clear: both;
     }
 
-    /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
     @media screen and (max-width: 800px) {
         .leftcolumn,
         .rightcolumn {
@@ -85,18 +101,19 @@
         <div class="leftcolumn">
             <div class="card">
                 <h2>Table of Contents</h2>
-                <li><a href="#20231127">Nov. 27, 2023: Software Architecture for Real-time Big Data Forecasting Systems</a></li>
-                <li><a href="#20210708">Jul. 8, 2021: University of Toronto vs UWaterloo: How to Decide?</a></li>
-                <li><a href="#20210511">May 11, 2021: For those considering the PEY Co-op program at University of Toronto</a></li>
-                <li><a href="#20210504">May 4, 2021: For anyone considering the Engineering Science program at University of Toronto</a></li>
+                <ul>
+                    <li><a href="#20231127">Nov. 27, 2023: Software Architecture for Real-time Big Data Forecasting Systems</a></li>
+                    <li><a href="#20210708">Jul. 8, 2021: University of Toronto vs UWaterloo: How to Decide?</a></li>
+                    <li><a href="#20210511">May 11, 2021: For those considering the PEY Co-op program at University of Toronto</a></li>
+                    <li><a href="#20210504">May 4, 2021: For anyone considering the Engineering Science program at University of Toronto</a></li>
+                </ul>
                 <br><a href="blog2.html">Next page</a>
             </div>
         </div>
 
-
         <div class="rightcolumn">
 
-            <div class="card">
+            <div class="card" style="background-color: #2c3e50; color: #d4d4dc;">
                 <h2 id="20231127">Software Architecture for Real-time Big Data Forecasting Systems</h2>
                 <h5>Kinaxis Engineering Blog, Nov. 27, 2023</h5>
                 <img src="pics/software-architecture.png" alt="Software" style="width:80%">
@@ -107,7 +124,7 @@
             </div>
 
 
-            <div class="card">
+            <div class="card" style="background-color: #2c3e50; color: #d4d4dc;">
                 <h2 id="20210708">University of Toronto vs UWaterloo: How to Decide?</h2>
                 <h5>Medium - The Wandering Engineer, July 8, 2021</h5>
                 <img src="pics/uoft1.jpg" alt="UofT" style="width:80%">
@@ -118,7 +135,7 @@
             </div>
 
 
-            <div class="card">
+            <div class="card" style="background-color: #2c3e50; color: #d4d4dc;">
                 <h2 id="20210511">For those considering the PEY Co-op program at University of Toronto</h2>
                 <h5>Medium - The Wandering Engineer, May 11, 2021</h5>
                 <img src="pics/uoft2.jpeg" alt="UofT" style="width:80%">
@@ -129,7 +146,7 @@
             </div>
 
 
-            <div class="card">
+            <div class="card" style="background-color: #2c3e50; color: #d4d4dc;">
                 <h2 id="20210504">For anyone considering the Engineering Science program at University of Toronto</h2>
                 <h5>Medium - The Wandering Engineer, May 4, 2021</h5>
                 <img src="pics/bahen.jpg" alt="Bahen" style="width:80%">
