--- a/experience.html
+++ b/experience.html
@@ -7,6 +7,18 @@
 <main-head></main-head>
 <main-header></main-header>
 
+<head>
+    <style>
+        .item {
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .item:hover {
+            transform: scale(1.05);
+        }
+    </style>
+</head>
+
 <body background="pics/toronto1.png">
 	<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:1500px;">
 
