--- a/ilead.html
+++ b/ilead.html
@@ -7,6 +7,118 @@
 <main-head></main-head>
 <main-header></main-header>
 
+<head>
+    <style>
+        html {
+            scroll-behavior: smooth;
+        }
+
+        body {
+            background-color: #1a2639;
+            color: #d4d4dc;
+            animation: fadeIn 1s ease-in;
+            transition: background-color 0.3s ease;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        h1, h2, h3 {
+            color: #3e8989;
+        }
+
+        p a {
+            text-decoration: none;
+            color: #84a9ac;
+            padding: 0;
+            position: relative;
+        }
+
+        p a:hover {
+            color: #e8e8e8;
+        }
+
+        p a::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            background-color: #84a9ac;
+            transform: scaleX(0);
+            transition: transform 0.3s ease-out;
+        }
+
+        p a:hover::after {
+            transform: scaleX(1);
+        }
+
+        a {
+            text-decoration: none;
+            color: #84a9ac;
+            transition: color 0.3s ease;
+            position: relative;
+        }
+
+        a:hover {
+            color: #e8e8e8;
+        }
+
+        a::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            background-color: #84a9ac;
+            transform: scaleX(0);
+            transition: transform 0.3s ease-out;
+        }
+
+        a:hover::after {
+            transform: scaleX(1);
+        }
+
+        .content-container {
+            padding: 0 10%;
+            margin-top: 170px;
+            min-height: 1500px;
+        }
+
+        img {
+            width: 80%;
+            margin: 10px;
+            transition: transform 0.3s ease;
+        }
+
+        img:hover {
+            transform: scale(1.05); 
+        }
+
+        .image-container {
+            float: right;
+            margin: 25px;
+            padding: 10px;
+            background-color: rgba(255, 255, 255, 0.2);
+            border-radius: 5px; 
+        }
+
+        .small-image {
+            max-width: 200px;
+            height: auto;
+            display: block;
+        }
+    </style>
+</head>
+
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
 	<body>
 
@@ -17,7 +129,9 @@
 		<h3>Institute for Leadership Education in Engineering (iLead), <i>The Game</i> Program, University of Toronto
 		</h3><br>
 
-		<img src="pics/ILead.png" alt="portfolio item" width=400 style="float:right;margin:25px;">
+		<div class="image-container">
+            <img src="pics/ILead.png" alt="portfolio item" class="small-image">
+        </div>
 
 		<p>During my second year (2017-2018), I participated in iLead's <i>The Game</i> program, a platform where teams
 			use the engineering approach to resolve social issues. </p>
