--- a/index.html
+++ b/index.html
@@ -1,37 +1,43 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
-<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-<script src="styles.js"></script>
-<link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
-<main-head></main-head>
-
-<div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:1500px;">
-    <body background="pics/toronto1.png">
-
-        <title>Bill Sun's Portfolio</title>
-
-        <div class="box">
-            <img src="pics/portrait2.jpg" alt="" class="box-img">
-            <h1>Bill Sun</h1>
-            <h5>Machine Learning and Software Engineer</h5>
-            <p>
-                Hi! I am a Machine Learning and Software Engineer. 
-                This is a showcase of my skills, projects, research, and insights. Enjoy!
-            </p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <body background="pics/toronto1.png"></body>
+    <title>Bill Sun - Machine Learning and Software Engineer</title>
+    <link rel="stylesheet" href="styles2.css">
+    <script src="https://kit.fontawesome.com/29daaa91a3.js" crossorigin="anonymous"></script>
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="logo">BILL SUN</div>
             <ul>
-                <li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fa-brands fa-linkedin"
-                            aria-hidden="true"></i></a></li>
-                <li><a href="https://github.com/billyhsun"><i class="fa-brands fa-github-square" aria-hidden="true"></i></a>
-                </li>
+                <li><a href="about2.html">ABOUT</a></li>
+                <li><a href="research.html">RESEARCH</a></li>
+                <li><a href="notfound.html">EXPERIENCE</a></li>
+                <li><a href="notfound.html">PROJECTS</a></li>
+                <li><a href="notfound.html">RESUME</a></li>
+                <li><a href="blogs.html">BLOG</a></li>
             </ul>
-            <button><a href="about.html">About</a></button>
-            <button><a href="research.html">Research</a></button>
-            <button><a href="notfound.html">Résumé</a></button>
-            <button><a href="blogs.html">Blog</a></button>
-        </div>
-    </body>
-</div>
-
-<main-footer></main-footer>
+        </nav>
+    </header>
+    
+    <main>
+        <section id="hero">
+            <img src="pics/portrait2.jpg" alt="Bill Sun" class="profile-picture">
+            <h1>Bill Sun</h1>
+            <p>MACHINE LEARNING AND SOFTWARE ENGINEER</p>
+            <div class="cta-buttons">
+                <a href="#" class="btn">Hire Me</a>
+                <a href="#" class="btn">Download CV</a>
+            </div>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/billyhsun"><i class="fab fa-github"></i></a>
+            </div>
+        </section>
+        <div class="bottom-rectangle"></div>
+    </main>
+</body>
 </html>
