--- a/research.html
+++ b/research.html
@@ -8,28 +8,144 @@
 <main-header></main-header>
 
 <style>
-    body p a {
+    html {
+        scroll-behavior: smooth;
+    }
+
+    body {
+        background-color: #1a2639;
+        color: #d4d4dc;
+        animation: fadeIn 1s ease-in;
+        transition: background-color 0.3s ease;
+    }
+
+    @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+    }
+
+    h1, h2, h3, .titleabout {
+        color: #3e8989;
+        animation: slideIn 0.8s ease-out;
+    }
+
+    a {
         text-decoration: none;
-        color: #ffbfbf;
-        padding: 0;
+        color: #84a9ac;
+        transition: color 0.3s ease;
+        position: relative;
     }
 
-    body p a:hover {
-        text-decoration: underline;
-        color: #ffbfbf;
-        padding: 0;
+    a:hover {
+        color: #e8e8e8;
     }
 
-    body h3 a {
-        text-decoration: none;
-        color: #ffbfbf;
-        padding: 0;
+    a::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #84a9ac;
+        transform: scaleX(0);
+        transition: transform 0.3s ease-out;
     }
 
-    body h3 a:hover {
-        text-decoration: underline;
-        color: #ffbfbf;
-        padding: 0;
+    a:hover::after {
+        transform: scaleX(1);
+    }
+
+    .container {
+        width: 80%;
+        margin-left: 10%;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        background-color: #2c3e50;
+        transition: background-color 0.3s ease;
+    }
+
+    .skills {
+        text-align: right;
+        padding: 5px;
+        color: white;
+        animation: skillFill 2s ease-out;
+    }
+
+    @keyframes skillFill {
+        from { width: 0; }
+        to { width: 100%; }
+    }
+
+    .fluent { width: 100%; background-color: #3498db; }
+    .good { width: 67%; background-color: #2980b9; }
+    .familiar { width: 33%; background-color: #1f618d; }
+
+    .tooltip {
+        position: relative;
+        display: inline-block;
+        border-bottom: 1px dotted #d4d4dc;
+    }
+
+    .tooltip .tooltiptext {
+        visibility: hidden;
+        width: 120px;
+        background-color: #34495e;
+        color: #FFFFFF;
+        text-align: center;
+        border-radius: 6px;
+        padding: 5px 0;
+        position: absolute;
+        z-index: 1;
+        top: -5px;
+        left: 110%;
+        opacity: 0;
+        transition: opacity 0.3s;
+    }
+
+    .tooltip:hover .tooltiptext {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    #skillicon {
+        color: #EEEEEE;
+        margin: 5px;
+        transition: transform 0.3s ease;
+    }
+
+    #skillicon:hover {
+        color: #FFFFFF;
+        transform: rotate(10deg);
+    }
+
+    .item img {
+        transition: transform 0.3s ease;
+    }
+
+    .item img:hover {
+        transform: scale(1.05);
+    }
+
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+
+    th, td {
+        padding: 10px;
+        text-align: left;
+        border-bottom: 1px solid #3e8989;
+    }
+
+    figure.item {
+        display: inline-block;
+        margin: 10px;
+        text-align: center;
+    }
+
+    figcaption.desc {
+        margin-top: 5px;
     }
 </style>
 
