--- a/index.html
+++ b/index.html
@@ -1,28 +1,19 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <body background="pics/toronto1.png"></body>
-    <title>Bill Sun - Machine Learning and Software Engineer</title>
-    <link rel="stylesheet" href="styles2.css">
-    <script src="https://kit.fontawesome.com/29daaa91a3.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <header>
-        <nav>
-            <div class="logo">BILL SUN</div>
-            <ul>
-                <li><a href="about2.html">ABOUT</a></li>
-                <li><a href="research.html">RESEARCH</a></li>
-                <li><a href="notfound.html">EXPERIENCE</a></li>
-                <li><a href="notfound.html">PROJECTS</a></li>
-                <li><a href="notfound.html">RESUME</a></li>
-                <li><a href="blogs.html">BLOG</a></li>
-            </ul>
-        </nav>
-    </header>
-    
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<body background="pics/toronto1.png"></body>
+<title>Bill Sun - Machine Learning and Software Engineer</title>
+<link rel="stylesheet" href="styles2.css">
+<link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
+<main-head></main-head>
+<main-header></main-header>
+<script src="styles.js"></script>
+<script src="https://kit.fontawesome.com/29daaa91a3.js" crossorigin="anonymous"></script>
+
+
+<body>  
     <main>
         <section id="hero">
             <img src="pics/portrait2.jpg" alt="Bill Sun" class="profile-picture">
@@ -40,4 +31,6 @@
         <div class="bottom-rectangle"></div>
     </main>
 </body>
+
+<main-footer></main-footer>
 </html>
