--- a/capstone.html
+++ b/capstone.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-<script src="styles.js"></script>
+<script src="styles2.js"></script>
 <link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
 <main-head></main-head>
 <main-header></main-header>
